Set JAVA_OPTS as MAVEN_OPTS instead. Fixes #43.