@@ -2,7 +2,7 @@
 
 set MAVEN_HOME=%SOFTWARE_DIR%\apache-maven-3.3.9
 
-set MAVEN_OPTS=-Xmx4096M -Xms512M -XX:MaxPermSize=512M -Dfile.encoding=UTF-8
+set MAVEN_OPTS=%JAVA_OPTS%
 
 set M3_HOME=%MAVEN_HOME%
 
