@@ -1,6 +1,6 @@
 export MAVEN_HOME=$SOFTWARE_DIR/apache-maven-3.3.9
 
-export MAVEN_OPTS="-Xmx4096M -Xms512M -XX:MaxPermSize=512M -Dfile.encoding=UTF-8"
+export MAVEN_OPTS=$JAVA_OPTS
 
 export M3_HOME=$MAVEN_HOME
 
